feat: file operations.

--- a/.gitignore
+++ b/.gitignore
@@ -193,8 +193,6 @@ dist
 # SvelteKit build / generate output
 .svelte-kit
 
-mycode/api_output/*
-mycode/*.json
-mycode/*.sh
-mycode/*.jsonl
 .gitignore
+mycode/data/
+mycode/outputs
